--- a/install
+++ b/install
@@ -8,7 +8,7 @@ echo '==========================================================================
 echo 'Preparing dotfile install ...'
 sudo -v # ensure we only type password once
 
-type php &>/dev/null && current_php_version=$(php -r "echo PHP_VERSION;" | cut -d. -f-2) 
+type php &>/dev/null && current_php_version=$(php -r "echo PHP_VERSION;" | cut -d. -f-2)
 
 # echo '================================================================================'
 
@@ -53,9 +53,9 @@ echo 'Installing, updating, and cleaning up brew dependencies...'
 
 #sudo chown -R $(id -un) /usr/local/Cellar/{php*,dnsmasq*,nginx*} &>/dev/null || true
 
-export HOMEBREW_NO_INSTALL_CLEANUP=true 
+export HOMEBREW_NO_INSTALL_CLEANUP=true
 
-brew bundle --global
+brew bundle --global || true
 #brew bundle cleanup --force --global
 # brew services cleanup
 # sudo brew services cleanup
@@ -100,7 +100,7 @@ echo 'Done installing, updating, and cleaning up brew dependencies.'
 
 echo '================================================================================'
 echo 'Installing and updating terminal themes...'
-for theme in 3024_Day AtomOneLight PencilLight Material Spring ayu_light; do 
+for theme in 3024_Day AtomOneLight PencilLight Material Spring ayu_light; do
     THEME=https://raw.githubusercontent.com/dexpota/kitty-themes/master/themes/${theme}.conf
     wget -q "$THEME" -P ~/.config/kitty/themes
 done
@@ -136,7 +136,7 @@ exit 0
 
 echo -e "Check and Fix Php (yN) ? " && read valetphp
 case $valetphp in
-    [Yy]* )        
+    [Yy]* )
         [ -r $HOME/dotfiles/files/switch_php ] && {
             source $HOME/dotfiles/files/switch_php
             switch_php "${current_php_version:-8.1}"
